-
Bug
-
Resolution: Done
-
P2: Important
-
5.0.0, 5.1.0 , 5.12
-
Verified on Linux and Mac
-
30db7d94e002b5c5b29820050a2220ef06afa54c (qt/qtdeclarative/5.12), 0290e0fd5 (dev)
When applying revisions to a grouped property, it will cause an assert/crash when the revised property is accessed.
This issue was discovered when adding a "threshold" property to MouseArea in https://codereview.qt-project.org/#change,63586
A stand alone example to narrow down the issue is attached. To reproduce it, install the example and run MyTest.qml before and after removing the comment in the example file.
The bug applies both to stable and dev branches so it is unlikely related to the v4 changes.
- relates to
-
QTBUG-122705 Drag.imageSource property should have hi-dpi support
-
- Closed
-
- resulted in
-
QTBUG-54444 recent QQuickWindow signals such as afterSynchronizing are not available on the Window attached property
-
- Reported
-
-
QTBUG-65463 ApplicationWindow.window attached property not available due to component versioning
-
- Closed
-